# automeals

./: .gitignore  DEPLOYMENT.md  README.md  main.py  render.yaml  requirements.txt
.github/workflows/: ci.yml
backend/: .pre-commit-config.yaml  README.md  pyproject.toml  wsgi.py
backend/app/: data.py  db.py  lifespan.py  main.py  models.py  routes.py
backend/app/raw_data/: recipes.csv
backend/tests/: conftest.py  test_data.py  test_routes.py
frontend/: README.md  index.html  package.json  tailwind.config.cjs  vercel.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: Calendar.tsx  InstructionsModal.tsx  Modal.tsx  NavigationBar.tsx  RecipeCards.tsx  RecipeDropDown.tsx
frontend/src/pages/: ExplorePage.tsx  PickPage.tsx  PlanPage.tsx
frontend/src/types/: index.ts  recipe.ts
frontend/src/utils/: api.ts  tidyRecipe.ts  useIsMobile.ts
