[project]
name = "automeals-backend"
version = "0.1.0"
description = "Backend for automeals."
authors = [{ name = "David Zhang" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.116.0",
    "sqlmodel==0.0.24",
    "uvicorn[standard]==0.35.0",
    "asgiref==3.8.1",
]

[project.optional-dependencies]
dev = ["pre-commit==4.1.0", "pytest==8.3.4", "httpx==0.28.1"]

[tool.setuptools.packages.find]
where = ["app"]

[tool.setuptools.package-data]
"app" = ["raw_data/*"]

[build-system]
requires = ['pip>=25.1.1', 'setuptools>=80.9.0', 'wheel>=0.45.1']
build-backend = 'setuptools.build_meta'
